feat: update kitty conf

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -12,30 +12,39 @@ font_family     JetBrainsMono Nerd Font Mono Regular
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
-
-window_border_width 0.5pt
+alt_send_esc false
+background_opacity 1
+# background_blur 60
+window_border_width 0.1px
+window_margin_width 0
+window_padding_width 0
 window_resize_step_cells 2
 window_resize_step_lines 2
 initial_window_width 640
 initial_window_height 400
 draw_minimal_borders yes
-inactive_text_alpha 0.7
-hide_window_decorations no
-macos_titlebar_color background
+inactive_text_alpha 0.5
+hide_window_decorations titlebar-only
+macos_titlebar_color system
 macos_thicken_font 0
 macos_option_as_alt left
 active_border_color none
+
+tab_separator " ┇"
 
 # default layout is vertical splits only
 enabled_layouts splits
 enable_audio_bell no
 tab_bar_style powerline
+tab_powerline_style angled
+tab_title_template "{index}  {tab.active_exe}"
+macos_show_window_title_in none
 term xterm-256color
 shell_integration enabled
 allow_hyperlinks yes
 editor nvim
 globinclude kitty.d/**/*.conf
-font_size 14.0
+font_size 15.0
 
 # Tokyo Night
 background #24283b
@@ -80,6 +89,16 @@ color15 #c0caf5
 # extended colors
 color16 #ff9e64
 color17 #db4b4b
+
+# map
+
+map shift+ctrl+l next_window
+map shift+ctrl+h previous_window
+map shift+ctrl+enter new_window
+
+map shift+cmd+l next_tab
+map shift+cmd+h previous_tab
+
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
 #: +list-fonts` command. By default they are derived automatically, by
