--- a/zed/settings.json
+++ b/zed/settings.json
@@ -7,11 +7,21 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
+  "language_models": {
+    "anthropic": {
+      "version": "1"
+    }
+  },
   "theme": "Tokyo Night Storm",
+  "experimental.theme_overrides": {
+    "editor.background": "#1f2335",
+    "editor.gutter.background": "#1f2335"
+  },
   "telemetry": {
     "diagnostics": false,
     "metrics": false
   },
+  "line_indicator_format": "long",
   "vim_mode": true,
   "ui_font_size": 14,
   "buffer_font_size": 14,
@@ -27,7 +37,73 @@
     // "never": don't use system clipboard
     // "on_yank": use system clipboard for yank operations
     "use_system_clipboard": "always",
+    // leader key
+    "leader": "space",
     // Lets `f` and `t` motions extend across multiple lines
     "use_multiline_find": true
+  },
+  // "experimental.theme_overrides": {
+  //   "background.appearance": "blurred",
+  //   "background": "#00002428",
+  //   "editor.background": "#00000030",
+  //   "editor.gutter.background": "#00000030",
+  //   "tab_bar.background": "#00000030",
+  //   "terminal.background": "#00000030",
+  //   "toolbar.background": "#00000030",
+  //   "tab.active_background": "#28282820",
+  //   "tab.inactive_background": "#00000000",
+  //   "status_bar.background": "#00000030",
+  //   "title_bar.background": "#00000030",
+  //   "panel.background": "#00000030",
+  //   "border.variant": "#00000000",
+  //   "scrollbar.track.border": "#00000000",
+  //   "editor.active_line.background": "#00000000"
+  // },
+  // "file_scan_exclusions": [
+  //   "**/.git",
+  //   "**/.svn",
+  //   "**/.hg",
+  //   "**/CVS",
+  //   "**/.DS_Store",
+  //   "**/Thumbs.db",
+  //   "**/.classpath",
+  //   "**/.settings"
+  // ],
+  "features": {
+    "inline_completion_provider": "supermaven"
+  },
+  "assistant": {
+    "default_model": {
+      "provider": "zed.dev",
+      "model": "claude-3-5-sonnet-20240620"
+    },
+    "dock": "left",
+    "version": "2",
+    "provider": null
+  },
+  "lsp": {
+    "discord_presence": {
+      "initialization_options": {
+        // Base url for all language icons
+        "base_icons_url": "https://raw.githubusercontent.com/xhyrom/zed-discord-presence/main/assets/icons/",
+
+        "state": "Writing new bugs",
+        "details": null,
+        // URL for large image
+        "large_image": "{base_icons_url}/{language}.png",
+        "large_text": "{language:u}", // :u makes first letter upper-case
+        // URL for small image
+        "small_image": "{base_icons_url}/zed.png",
+        "small_text": "Zed",
+
+        // Rules - disable presence in some workspaces
+        "rules": {
+          "mode": "blacklist", // or whitelist
+          "paths": ["absolute path"]
+        },
+
+        "git_integration": true
+      }
+    }
   }
 }
