chore(kitty): change keymap

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -94,7 +94,7 @@ color17 #db4b4b
 
 map shift+ctrl+l next_window
 map shift+ctrl+h previous_window
-map shift+ctrl+enter new_window
+map shift+ctrl+t new_window
 
 map shift+cmd+l next_tab
 map shift+cmd+h previous_tab
