style: change terminal line height and disable breadcrumbs

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -8,6 +8,12 @@
 // from the command palette or from `Zed` application menu.
 {
   "show_inline_completions": false,
+  "terminal": {
+    "line_height": "standard",
+    "toolbar": {
+      "breadcrumbs": false
+    }
+  },
   "language_models": {
     "anthropic": {
       "version": "1"
